[gd_scene load_steps=6 format=3 uid="uid://bbomspbrm57wk"]

[ext_resource type="Script" path="res://scripts/configs.gd" id="1_ddcn4"]
[ext_resource type="Script" path="res://scripts/volume_config.gd" id="1_h3jm6"]
[ext_resource type="AudioStream" uid="uid://c4fhyrvqp4kwd" path="res://Nihilore - Home - 02 Dilemma.mp3" id="1_jt4gi"]
[ext_resource type="Script" path="res://scripts/bright_config.gd" id="2_v2eg8"]

[sub_resource type="GDScript" id="GDScript_rgnr2"]
script/source = "extends Camera2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="Node2D" type="Node2D"]

[node name="Controller" type="Node2D" parent="."]
script = ExtResource("1_ddcn4")

[node name="Camera2D" type="Camera2D" parent="."]
script = SubResource("GDScript_rgnr2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_right = 0.999
anchor_bottom = 1.0
offset_right = 0.151855

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.5
offset_top = 155.0
offset_right = 69.5
offset_bottom = 233.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/GridContainer"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/GridContainer" groups=["Persist"]]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("1_h3jm6")
bus_name = "Volume"

[node name="GridContainer2" type="GridContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.5
offset_top = 245.0
offset_right = 67.5
offset_bottom = 323.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/GridContainer2"]
layout_mode = 2
text = "Brilho"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/GridContainer2" groups=["Persist"]]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
value = 1.0
script = ExtResource("2_v2eg8")

[node name="GridContainer3" type="GridContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_right = 55.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/Control/GridContainer3"]
layout_mode = 2
text = "Save Configs"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_jt4gi")
autoplay = true
bus = &"Volume"

[connection signal="value_changed" from="CanvasLayer/Control/GridContainer/HSlider" to="Controller" method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Control/GridContainer/HSlider" to="CanvasLayer/Control/GridContainer/HSlider" method="_on_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Control/GridContainer2/HSlider" to="Controller" method="_on_bright_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/Control/GridContainer3/Button" to="Controller" method="_on_button_pressed"]
